# lema-os

./: .gitignore  Cargo.toml  PLAN.md  rust-toolchain.toml
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: lib.rs  main.rs
