[package]
name = "lema-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Lema OS Contributors"]
description = "Lema OS kernel — Rust + a touch of C/NASM"
license = "MIT"
publish = false

# Phase 0: no dependencies. Phase 1+ will add:
#   bootloader / limine   — Limine bootloader integration
#   x86_64                — GDT, IDT, instructions, page tables
#   linked_list_allocator — kernel heap
#   spin                  — spinlocks (Phase 8 SMP)
#   uart_16550            — serial port driver
[dependencies]

[lib]
name = "lema"
path = "src/lib.rs"

[[bin]]
name = "lema-kernel"
path = "src/main.rs"

[features]
default = []